First version - done

--- a/Appendix/Appendix_PrivatePhylogenetirTrees_Code.tex
+++ b/Appendix/Appendix_PrivatePhylogenetirTrees_Code.tex
@@ -162,7 +162,7 @@ where we used Jensen's inequality and properties of the trace norm. The last ter
 \end{equation*}
  Then, we can use Lemma~\ref{lemma:trace_distance_bound} which states that the above probability is negligible in $n$ and gives us an upper bound for $\delta\big( \rho_{\mathcal{T}X^m E}, \sigma_{\mathcal{T}X^m E} \big)$. In particular, given the set $[m]$ with $(1+t)n$ elements, we apply the aforementioned corollary for a random subset $\mathcal{T}$ of size $tn$ and its complement $\bar{\mathcal{T}}$ of size $n$. Denoting by $\mu_{\mathcal{T}}$ and $\mu_{\bar{\mathcal{T}}}$, respectively,  the averages of these subsets, we obtain
 \begin{equation*}
-\text{Pr}[\mu_{\bar{\mathcal{T}}} - \mu_{\mathcal{T}} \geq \zeta] \leq \exp( -\frac{2 \zeta^2t^2n^2}{(nt+1)(t+1)}).
+\text{P}[\mu_{\bar{\mathcal{T}}} - \mu_{\mathcal{T}} \geq \zeta] \leq \exp( -\frac{2 \zeta^2t^2n^2}{(nt+1)(t+1)}).
     \end{equation*}
 
 Hence, we have:
