--- a/List_of_Abbreviations.tex
+++ b/List_of_Abbreviations.tex
@@ -1,11 +1,11 @@
 \chapter*{List of Abbreviations}
 
 
-\textbf{AES} -- Advanced Encryption Standard.
+\textbf{AES} -- Advanced encryption standard.
 \vspace{0.5cm}\\
 \textbf{ALSZ13} -- OT extension protocol developed by Gilad Asharov, Yehuda Lindell, Thomas Schneider, and Michael Zohner \cite{ALSZ13}.
 \vspace{0.5cm}\\
-\textbf{API} -- Application Programming Interface.
+\textbf{API} -- Application programming interface.
 \vspace{0.5cm}\\
 \textbf{BB84} -- Quantum key distribution protocol developed by Charles Bennet and Gilles Brassard in 1984 \cite{BB84}.
 \vspace{0.5cm}\\
@@ -21,7 +21,7 @@
 \vspace{0.5cm}\\
 \textbf{BQS} -- Bounded-quantum-storage model.
 \vspace{0.5cm}\\
-\textbf{BQS-UC} -- Bounded-quantum-storage model in the universal compasability framework.
+\textbf{BQS-UC} -- Bounded-quantum-storage universal composability model.
 \vspace{0.5cm}\\
 \textbf{CBMC-GC} -- C Bounded model checker - Garbled Circuit.
 \vspace{0.5cm}\\
