--- a/Thesis_Preamble.tex
+++ b/Thesis_Preamble.tex
@@ -814,6 +814,8 @@
 %\newtheorem{lemma}[theorem]{Lemma}
 \newtheorem{claim}[theorem]{Claim}
 
+\usepackage{longtable}
+
 %%%%%%%%%%%% Renner Thesis %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \newcommand*{\textfrac}[2]{{\textstyle \frac{#1}{#2}}}
