--- a/abstract.tex
+++ b/abstract.tex
@@ -2,13 +2,13 @@
 \chapter*{Abstract}
 \addcontentsline{toc}{section}{Abstract}
 
-Quantum cryptography is the field of cryptography that explores the quantum properties of matter. Generally, it aims to develop primitives beyond the reach of classical cryptography and to improve existing classical implementations. Although much of the work in this field covers quantum key distribution (QKD), there have been some crucial steps toward the understanding and development of other two-party primitives, such as quantum oblivious transfer (QOT). One can show the similarity between the application structure of both QKD and QOT primitives. Just as QKD protocols allow quantum-safe communication, QOT protocols allow quantum-safe computation. However, the conditions under which QOT is fully quantum-safe have been subject to intense scrutiny and study. In this thesis, we start by surveying the work developed around the concept of oblivious transfer within theoretical quantum cryptography. We focus on some proposed protocols and their security requirements. We review the impossibility results that daunt this primitive and discuss several quantum security models under which it is possible to prove QOT security. 
+Quantum cryptography is a field of study that utilizes the properties of quantum physics to develop cryptographic primitives that are beyond the reach of classical cryptography. Its main objective is to improve existing classical implementations and to introduce new cryptographic methods that can withstand the power of quantum computers. While much of the research in this field has focused on quantum key distribution (QKD), there have been important advances in the understanding and development of other two-party primitives such as quantum oblivious transfer (QOT). QOT protocols, similar to QKD protocols, allow for quantum-safe computation, however, the conditions under which QOT is fully quantum-safe are still under intense scrutiny. The thesis begins by surveying the work done on the concept of oblivious transfer within theoretical quantum cryptography, highlighting proposed protocols and their security requirements, discussing impossibility results, and examining quantum security models in which QOT security can be proven.
 
-The most famous application of OT lies in the realm of secure multiparty computation (SMC). This technology has the potential to be disruptive in the fields of data analysis and computation. It enables several parties to compute virtually any function while preserving the privacy of their inputs. However, most of its protocols’ security and efficiency relies on the security and efficiency of OT. For this reason, we make a detailed comparison between the complexity of quantum oblivious transfer based on oblivious keys and two of the fastest classical OT protocols.
+The most significant application of oblivious transfer (OT) is in the realm of secure multiparty computation (SMC). This technology has the potential to revolutionize fields such as data analysis and computation by enabling multiple parties to compute virtually any function while maintaining the privacy of their inputs. However, the security and efficiency of SMC protocols are heavily dependent on the security and efficiency of OT. To address this, the thesis conducts a detailed comparison of the complexity of quantum oblivious transfer based on oblivious keys and two of the fastest classical OT protocols. This comparison provides insight into the potential benefits and limitations of using quantum techniques in SMC.
 
-Following the theoretical comparison between quantum and classical OT, we integrate and compare both approaches within an SMC system based on genomic analysis. In summary, we propose a feasible SMC system assisted with quantum cryptographic protocols that is designed to compute a phylogenetic tree from a set of private genome sequences. This system significantly improves the privacy and security of the computation thanks to three quantum cryptographic protocols that provide enhanced security against quantum computer attacks. This system adapts several distance-based methods (Unweighted Pair Group Method with Arithmetic mean, Neighbour-Joining, Fitch-Margoliash) into a private setting where the sequences owned by each party are not disclosed to the other members present in the protocol. We theoretically evaluate the performance and privacy guarantees of the system through a complexity analysis and security proof and give an extensive explanation of the implementation details and cryptographic protocols. We also implement a quantum-assisted secure phylogenetic tree computation based on the Libscapi implementation of the Yao protocol, the PHYLIP library, and simulated keys of two quantum systems: quantum oblivious key distribution and quantum key distribution. We benchmark this implementation against a classical-only solution and we conclude that both approaches render similar execution times, the only difference being the time overhead taken by the oblivious key management system of the quantum-assisted approach.
+Building on the theoretical comparison of quantum and classical approaches to oblivious transfer, the thesis integrates and compares both within an SMC system for genomic analysis. The proposed system utilizes quantum cryptographic protocols to compute a phylogenetic tree from a set of private genome sequences. This system significantly improves the privacy and security of the computation by incorporating three quantum cryptographic protocols that provide enhanced security against quantum computer attacks. The system adapts several distance-based methods, such as the Unweighted Pair Group Method with Arithmetic mean, Neighbour-Joining, and Fitch-Margoliash, into a private setting where the sequences owned by each party are not disclosed to other members. The performance and privacy guarantees of the system are evaluated theoretically through complexity analysis and security proof. Additionally, the thesis provides an extensive explanation of the implementation details and cryptographic protocols used. The implementation of quantum-assisted secure phylogenetic tree computation is based on the Libscapi implementation of the Yao protocol, the PHYLIP library, and simulated keys of two quantum systems: quantum oblivious key distribution and quantum key distribution. The implementation is benchmarked against a classical-only solution, and the results indicate that both approaches have similar execution times, with the only difference being the time overhead taken by the oblivious key management system of the quantum-assisted approach.
 
-Finally, we present the first quantum protocol for oblivious linear evaluation. Oblivious linear evaluation is a generalization of oblivious transfer, whereby two distrustful parties obliviously compute a linear function, $f(x) = ax + b$, i.e., each one provides their inputs that remain  unknown to the other, in order to compute the output $f(x)$ that becomes known to only one of them. From both a structural and a security point-of-view, oblivious linear evaluation is fundamental for arithmetic-based secure multi-party computation protocols. In the classical case, it is known that oblivious linear evaluation can be generated based on oblivious transfer, and quantum counterparts of these protocols can, in principle, be constructed as straightforward extensions based on quantum oblivious transfer. To the best of our knowledge, we present the first quantum protocol for oblivious linear evaluation that, furthermore, does not rely on quantum oblivious transfer. We start by presenting a semi-honest protocol and then we extend it to the dishonest setting employing a \textit{commit-and-open} strategy. Our protocol uses high-dimensional quantum states to obliviously compute the linear function,  $f(x)$, on Galois Fields of prime dimension, $GF(d) \cong \mathbb{Z}_d$, or prime-power dimension, $GF(d^M)$. These constructions use a complete set of mutually unbiased bases in prime-power dimension Hilbert spaces and their linear behaviour upon the Heisenberg-Weyl operators.  We also generalize our protocol to achieve vector oblivious linear evaluation, where several instances of oblivious linear evaluation are generated, thus making the protocol more efficient. We prove the protocols to have static security in the framework of quantum universal composability.
+Finally, the thesis presents the first quantum protocol for oblivious linear evaluation. Oblivious linear evaluation is a generalization of oblivious transfer, where two distrustful parties can obliviously compute a linear function, $f(x) = ax + b$, without revealing their inputs to each other, and the output $f(x)$ is known to only one of them. This primitive is essential for arithmetic-based secure multiparty computation protocols from both a structural and security point of view. In the classical setting, it is known that oblivious linear evaluation can be generated based on oblivious transfer, and quantum counterparts of these protocols can, in principle, be constructed as straightforward extensions based on quantum oblivious transfer. However, the thesis presents a novel quantum protocol for oblivious linear evaluation that does not rely on quantum oblivious transfer. The protocol is first presented for the semi-honest setting and then extended to the dishonest setting using a commit-and-open strategy. The protocol uses high-dimensional quantum states to obliviously compute the linear function, $f(x)$, on Galois fields of prime dimension, $GF(d) \cong \mathbb{Z}_d$, or prime-power dimension, $GF(d^M)$. The protocol utilizes a complete set of mutually unbiased bases in prime-power dimension Hilbert spaces and their linear behavior upon the Heisenberg-Weyl operators. The protocol is also generalized to achieve vector oblivious linear evaluation, which increases efficiency by generating several instances of oblivious linear evaluation. The security of the protocol is proven in the framework of quantum universal composability.
 
 \vfill
 
