--- a/resumo.tex
+++ b/resumo.tex
@@ -3,6 +3,14 @@
 \chapter*{Resumo}
 
 \addcontentsline{toc}{section}{Resumo}
+
+%%%%% ChatGPT:
+
+A criptografia quântica é um campo de estudo que utiliza as propriedades da física quântica para desenvolver primitivas criptográficas que estão além do alcance da criptografia clássica. Seu objetivo principal é melhorar as implementações clássicas existentes e introduzir novos métodos criptográficos que possam resistir à potência dos computadores quânticos. Embora grande parte da pesquisa neste campo tenha se concentrado na distribuição de chaves quânticas (QKD), houve avanços importantes na compreensão e desenvolvimento de outras primitivas de dois participantes, como a transferência oblíqua quântica (QOT). Os protocolos QOT, semelhantes aos protocolos QKD, permitem computação segura quântica, no entanto, as condições em que a QOT é completamente segura quântica ainda estão sob intensa escrutínio. A tese começa revisando o trabalho realizado sobre o conceito de transferência oblíqua na criptografia quântica teórica, destacando os protocolos propostos e suas exigências de segurança, discutindo resultados impossíveis e examinando modelos de segurança quântica em que a segurança QOT pode ser comprovada.
+
+%%%%%%%5
+
+
 A criptografia quântica é o campo da criptografia que explora as propriedades quânticas da matéria. Geralmente, visa desenvolver primitivas fora do alcance da criptografia clássica e melhorar as implementações clássicas existentes. Embora grande parte do trabalho neste campo se foque na distribuição de chaves quânticas (\textit{quantum key distribution}, QKD), também têm existido desenvolvimentos cruciais para a compreensão e desenvolvimento de outras primitivas criptográficas, como a transferência oblívia quântica (\textit{quantum oblivious transfer}, QOT). Pode-se mostrar a semelhança entre a estrutura de aplicação das primitivas QKD e QOT. Assim como os protocolos QKD permitem comunicação com segurança quântica, os protocolos QOT permitem computação com segurança quântica. No entanto, as condições sob as quais o QOT é totalmente seguro quântico têm sido sujeitas a um intenso estudo. Nesta tese, começamos por fazer um levantamento do trabalho desenvolvido em torno do conceito de OT dentro da criptografia quântica teórica. Aqui concentramo-nos em alguns protocolos propostos e nos seus requisitos de segurança. Revisitamos os resultados de impossibilidade que intimidam esta primitiva e discutimos vários modelos quânticos de segurança sob os quais é possível provar a segurança do QOT.
 
 A aplicação mais famosa do OT está no domínio da computação multipartidária segura (\textit{secure multiparty computation}, SMC). Esta tecnologia tem o potencial de ser disruptiva nas áreas de análise e computação de dados. Esta permite que vários participantes calculem um certa função, preservando a privacidade dos seus dados. No entanto, a maior parte da segurança e eficiência do protocolos SMD dependem da segurança e eficiência do OT. Por esta razão, fazemos uma comparação detalhada entre a complexidade da QOT baseada em chaves oblívias e dois dos protocolos OT clássicos mais rápidos.
