--- a/Introduction/Introduction.tex
+++ b/Introduction/Introduction.tex
@@ -7,27 +7,26 @@
 \chapter{Introduction}
 %\addcontentsline{toc}{chapter}{Introduction}
 
-The emerging fields of data mining and data analysis have deeply benefited from the increasing power of computers \cite{Wang11}. However, its need for a massive and methodical collection of data can lead to the complete or partial leak of private sensitive information, such as in the case of the genomics field \cite{NS08, L02, Homer08, Gymrek13}. As a consequence, the aggregation of data from different sources is most of the times blocked due to legally imposed regulations such as the General Data Protection Regulation (GDPR) \cite{EUdataregulations2016}. Although this has the benefit of protecting people's privacy, it also has the downside of preventing honest players from accessing data necessary to tackle some of the most important issues in our society. 
+The field of data mining and data analysis has seen significant advancements with the increasing power of computers \cite{Wang11}. However, the need for large-scale data collection can lead to the compromise of sensitive and private information, particularly in fields such as genomics \cite{NS08, L02, Homer08, Gymrek13}. As a result, the aggregation of data from different sources is often restricted by laws and regulations such as the General Data Protection Regulation (GDPR) \cite{EUdataregulations2016}. While these regulations aim to protect individuals' privacy, they also limit the ability of honest parties to access the data needed to address important societal issues.
 
 %********************************** %First Section  **************************************
 \section*{Secure multiparty computation}
 
 
-To overcome the privacy-related issues described above, several privacy-enhancing technologies have been proposed \cite{Li2016, Armknecht2015, Yao82}. One important area of research is secure multiparty computation (SMC). This technology allows a set of $n$ parties $P_i$ to jointly compute some function $f( x_1, ..., x_n ) = (y_1, ..., y_n)$ without disclosing their inputs to the other parties. The security requirements of SMC are equivalent to an ideal case, where every party $P_i$ sends his inputs to some independent and trusted third party, who computes $f()$ and sends back to each party their corresponding output.
+To address the privacy concerns outlined above, various privacy-enhancing technologies have been proposed, such as secure multiparty computation (SMC) \cite{Li2016, Armknecht2015, Yao82}. SMC enables a group of $n$ parties, denoted as $P_i$, to jointly compute a function $f( x_1, ..., x_n ) = (y_1, ..., y_n)$ without revealing their inputs to the other parties. The security requirements of SMC are equivalent to an ideal scenario, where each party $P_i$ sends their inputs to a separate, trusted third party, who then computes $f()$ and returns the corresponding output to each party.
 
-Since Yao seminal work \cite{Y86}, several SMC protocols have been developed, rendering different framework implementations \cite{Goldreich87, Bendlin11, D12}. However, they can generally be separated into two types according to the circuit logic being used: boolean or arithmetic. In each case, the efficiency and security of SMC heavily rely on the efficiency and security of important cryptographic primitives. Boolean-based SMC protocols rely on oblivious transfer (OT) \cite{K88} and arithmetic-based rely on oblivious linear evaluation (OLE) \cite{DPSZ12}. Impagliazzo and Rudich \cite{IR99} proved that both OT and OLE protocols require public cryptography and cannot just rely on symmetric cryptography. This is an unfortunate result both from an efficiency and security perspective. Indeed, symmetric cryptography is lighter than asymmetric cryptography and requires less computational assumptions. Moreover, with the emergence of quantum computers, Shor’s algorithm \cite{Sho95} jeopardizes all the current public-key methods based on RSA, Elliptic Curves or Diffie-Hellman, in which many OT and OLE implementations rely on. This puts at risk the deployment of classical OT and OLE, which ultimately leads to the exposure of the SMC parties’ private inputs. Thus, it is essential to develop SMC methods secure against quantum computers while not compromising state-of-the-art performance levels.
+The research area of SMC has been greatly advanced with the development of various protocols and frameworks \cite{Goldreich87, Bendlin11, D12}. These protocols can be broadly classified into two categories: those based on Boolean logic and those based on arithmetic logic. The efficiency and security of SMC protocols rely heavily on the efficiency and security of important cryptographic primitives, such as oblivious transfer (OT) for Boolean-based protocols and oblivious linear evaluation (OLE) for arithmetic-based protocols. However, a fundamental limitation of these primitives is their reliance on public cryptography, as proven by Impagliazzo and Rudich \cite{IR99}. This dependence on public cryptography is a significant drawback in terms of both performance and security, as it requires more computational resources and is vulnerable to attacks from quantum computers, as demonstrated by Shor's algorithm \cite{Sho95}. To address these issues and ensure the safe deployment of SMC methods in the face of quantum computing, it is crucial to develop SMC methods that are secure against quantum attacks while maintaining state-of-the-art performance levels.
 
 
 \section*{A quantum era}
 
-We are now in the beginning of what is known to be
-the second quantum revolution. Quantum technology has evolved to a point where we can integrate quantum exotic features into complex engineering systems. Most of the applications lie in the field of quantum cryptography, where one thrives to find protocols that offer some advantage over their classical counterparts. As analysed in \cite{B15, PSAN13}, these advantages can be of two types:
+The second quantum revolution is upon us and quantum technology has advanced to a point where we can integrate its unique features into complex engineering systems. Quantum cryptography, in particular, has been a major area of focus, with research aiming to develop protocols that offer advantages over their classical counterparts. As outlined in \cite{B15, PSAN13}, these advantages can take two forms:
 
 \begin{enumerate}
-    \item Improve the security requirements, rendering protocols that are information theoretically secure or require fewer computational assumptions;
-    \item Achieve new primitives that were previously not possible just with classical techniques.
+\item Improving security requirements and achieving information-theoretically secure protocols or those that require fewer computational assumptions;
+\item Developing new cryptographic primitives that were previously unattainable using classical techniques.
 \end{enumerate}
-Despite the most famous use-case of quantum cryptography being quantum key distribution (QKD), other primitives play an important role in this quest. Some examples of these cryptographic tasks are bit commitment \cite{CK11}, coin flipping \cite{CK09}, delegated quantum computation \cite{BFK09}, position verification \cite{Unr14}, and password-based identification \cite{DFSS14, DFLSS09}. 
+While quantum key distribution (QKD) is the most well-known application of quantum cryptography, other cryptographic tasks such as bit commitment \cite{CK11}, coin flipping \cite{CK09}, delegated quantum computation \cite{BFK09}, position verification \cite{Unr14}, and password-based identification \cite{DFSS14, DFLSS09} also play important roles in this field.
 
 Also, the intrinsic randomness provided by quantum phenomena is an ideal resource to develop quantum communication protocols for oblivious transfer (OT) \cite{BBCS92}. Remarkably, there is a distinctive difference between classical and quantum OT from a security standpoint, as the latter is proved to be possible assuming only the existence of quantum-hard one-way functions \cite{GLSV21, BCKM21}. This means quantum OT can be based only on symmetric cryptography, requiring weaker security assumptions than classical OT. Moreover, these quantum protocols frequently have a desirable property that guarantees information-theoretic security after the execution of the protocol. This property is commonly called everlasting security. This greatly improves the security of SMC protocols, allowing them to have their security based on symmetric cryptography alone and with this important feature of everlasting security. Regarding oblivious linear evaluation (OLE) primitive, it is known that it can be reduced to OT \cite{KOS16} through classical methods that do not require further assumptions. Therefore, it seems natural to use quantum OT to generate quantum-secure OLE instances.
 
