--- a/acknowledgments.tex
+++ b/acknowledgments.tex
@@ -3,11 +3,12 @@
 \chapter*{Acknowledgments}
 \addcontentsline{toc}{section}{Acknowledgements}
 
-The research presented in this dissertation was carried out under the supervision of Paulo Mateus and Armando Nolasco Pinto. I would like to thank them for their encouragement and support throughout these years.
+I am deeply grateful to my advisors, Paulo Mateus and Armando Nolasco Pinto, for their guidance and support throughout the course of this research. Their expertise and insight have been invaluable in shaping the direction and outcome of this dissertation.
 
-I have benefited a lot from the stimulating discussions with my colleagues. In particular, I wish to extend my special thanks to Chrysoula Vlachou. Also, I would like to thank Pedro Branco for the discussions we had around the UC framework and other crypto-related topics. Without those, this journey would have been more arduous.
 
-Also, I want to thank my friends Francisco Gomes, Gonçalo Santos, José Reis and Tomás Lobão. Ver\ae\ amiciti\ae\ sempitern\ae\ sunt. Finally and most importantly, I would like to thank my family for their love and support. This dissertation is dedicated to my wife Teresinha and my kids Henrique and Helena.
+I am also grateful for the valuable contributions of my colleagues, who have provided me with valuable insights and knowledge throughout this research. Special recognition goes to Chrysoula Vlachou for her stimulating discussions and Pedro Branco for his expertise on the UC framework and other crypto-related topics. Their guidance and support have been instrumental in shaping this research and making this journey a success.
+
+I would like to extend my appreciation to my friends Francisco Gomes, Gonçalo Santos, José Reis and Tomás Lobão, who have been a constant source of support and encouragement throughout my research journey. As the Latin saying goes, "Ver\ae\ amiciti\ae\ sempitern\ae\ sunt" (Cicero, "De Amicitia"). I also want to express my deep gratitude to my family, particularly my wife Teresinha and my children Henrique and Helena, for their unwavering love and support. This dissertation is dedicated to them.
 
 \vfill
 \begin{center}\begin{footnotesize}
